@@ -15,9 +15,9 @@ import java.util.Iterator;
 import java.nio.LongBuffer;
 import java.nio.ByteOrder;
 import dnl.utils.text.table.*;
-import jdk.incubator.foreign.MemoryAddress;
-import jdk.incubator.foreign.MemorySegment;
-import jdk.incubator.foreign.ResourceScope;
+import java.lang.foreign.MemoryAddress;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.MemorySession;
 
 public class RealMatrix implements AutoCloseable,Iterable<Real> {
   private transient long swigCPtr;
@@ -211,7 +211,7 @@ public class RealMatrix implements AutoCloseable,Iterable<Real> {
     RealMatrix m = new RealMatrix();
     m.init(rows, cols);
     MemoryAddress ma = MemoryAddress.ofLong(m.getRowPointers());
-    MemorySegment ms = MemorySegment.ofAddress(ma, rows * 8, ResourceScope.globalScope());
+    MemorySegment ms = MemorySegment.ofAddress(ma, rows * 8, MemorySession.global());
     m.rowPointers = ms.asByteBuffer().order(ByteOrder.nativeOrder()).asLongBuffer();
     m.rows        = new Real[rows];
     for (int i = 0; i < rows; i++)
